--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[dev]
+          pip install git+https://github.com/numpy/numpy-stubs
       - name: Lint
         run: |
           black ./ --check -l 79
