Update bump2version config

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ values =
 search = version="{current_version}"
 replace = version="{new_version}"
 
-[bumpversion:file:slidebook_python/__init__.py]
+[bumpversion:file:sld/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
