--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [bumpversion]
-current_version = 0.0.1
+current_version = 0.0.2-rc0
 commit = True
 tag = True
 tag_name = {new_version}
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}-{release}{rc}
 	{major}.{minor}.{patch}
 
@@ -17,10 +17,10 @@ long_description_content_type = text/markdown
 author = Adam Tyson
 author_email = code@adamltyson.com
 license = MIT
-project_urls =
+project_urls = 
 	Source = https://github.com/instituteofcancerresearch/slidebook-python
 	Tracker = https://github.com/instituteofcancerresearch/slidebook-python/issues
-classifiers =
+classifiers = 
 	Development Status :: 3 - Alpha
 	Intended Audience :: Developers
 	Programming Language :: Python
@@ -32,11 +32,11 @@ classifiers =
 zip_safe = False
 packages = find:
 python_requires = >=3.9
-setup_requires =
+setup_requires = 
 	setuptools_scm
 
 [options.extras_require]
-dev =
+dev = 
 	black
 	pytest
 	pytest-cov
@@ -46,7 +46,6 @@ dev =
 	coverage
 	mypy
 	types-PyYAML
-
 
 [bdist_wheel]
 universal = 1
@@ -58,7 +57,7 @@ exclude = __init__.py,build,.eggs
 [bumpversion:part:release]
 optional_value = prod
 first_value = rc
-values =
+values = 
 	rc
 	prod
 
