--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ packages = find:
 python_requires = >=3.9
 setup_requires = 
 	setuptools_scm
+install_requires =
+	numpy
 
 [options.extras_require]
 dev = 
