--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.0.2
+current_version = 0.0.3-rc0
 commit = True
 tag = True
 tag_name = {new_version}
@@ -34,7 +34,7 @@ packages = find:
 python_requires = >=3.9
 setup_requires = 
 	setuptools_scm
-install_requires =
+install_requires = 
 	numpy
 
 [options.extras_require]
