Update coverage report

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,4 +74,4 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [tool:pytest]
-addopts = --cov=slidebook-python
+addopts = --cov=sld
