--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,13 @@
 repos:
--   repo: https://github.com/python/black
-    rev: 21.6b0
-    hooks:
-    - id: black
-      pass_filenames: true
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
-    - id: flake8
-      pass_filenames: true
+    - repo: https://github.com/pycqa/isort
+      rev: 5.10.1
+      hooks:
+          - id: isort
+    - repo: https://gitlab.com/pycqa/flake8
+      rev: 3.9.2
+      hooks:
+          - id: flake8
+    - repo: https://github.com/psf/black
+      rev: 22.1.0
+      hooks:
+          - id: black
