--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,9 @@ repos:
       rev: 22.1.0
       hooks:
           - id: black
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: v0.931
+      hooks:
+          - id: mypy
+            additional_dependencies:
+                - types-PyYAML
