--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,6 @@
-[bumpversion]
-current_version = 0.0.3
-commit = True
-tag = True
-tag_name = {new_version}
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
-serialize = 
-	{major}.{minor}.{patch}-{release}{rc}
-	{major}.{minor}.{patch}
-
 [metadata]
 name = slidebook-python
+version = 0.0.3
 url = https://github.com/instituteofcancerresearch/slidebook-python
 description = Open slidebook .sldy files in Python
 long_description = file: README.md
@@ -50,29 +41,10 @@ dev =
 	types-PyYAML
 	isort
 
-[bdist_wheel]
-universal = 1
 
 [flake8]
 max-line-length = 79
 exclude = __init__.py,build,.eggs
-
-[bumpversion:part:release]
-optional_value = prod
-first_value = rc
-values = 
-	rc
-	prod
-
-[bumpversion:part:rc]
-
-[bumpversion:file:setup.py]
-search = version="{current_version}"
-replace = version="{new_version}"
-
-[bumpversion:file:sld/__init__.py]
-search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}"
 
 [tool:pytest]
 addopts = --cov=sld
